--- a/resources/html/version/version.css
+++ b/resources/html/version/version.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "tttgbnumber";
-  src: url("../../../../../resources/font/tttgbnumber.ttf");
+  font-family: "";
+  src: url("../../../font/.otf");
   font-weight: normal;
   font-style: normal;
 }
@@ -20,40 +20,48 @@ body {
 }
 .container {
   width: 536px;
-  background-image: url(../../img/bg.jpeg);
+  background-image: url(./items/bg.png);
   background-size: 100%;
   padding: 10px 0 10px 0;
 }
+.logo {
+  height: 80px;
+  background: url(./items/pll.png) no-repeat, url(./items/logo.png) no-repeat;
+  background-position: bottom 10px right 15px, center;
+  background-size: 50px 50px, 80%;
+  margin: 0px 20px 10px;
+}
 .version-card {
-  background: transparent;
-  margin: 5px 10px 8px 10px;
+  box-sizing: border-box;
+  border-image: url(./items/1.png) round;
+  border-image-slice: 13% 0 8% 0 fill;
+  border-top: 50px solid;
+  border-bottom: 40px solid;
+  margin: 5px 5px 5px 12px;
   position: relative;
-  box-shadow: 0 0 1px 0 #ccc, 2px 2px 4px 0 rgba(50, 50, 50, 0.8);
-  overflow: hidden;
-  color: #fff;
-  font-size: 16px;
-  border-radius: 4px;
+  /*overflow: hidden;*/
 }
 .version-card .title {
-  background: rgba(0, 0, 0, 0.4);
-  box-shadow: 0 0 1px 0 #fff;
-  color: white;
+  position: absolute;
+  top: -28px;
+  color: rgb(97, 97, 97);
   font-family: Number, YS;
-  padding: 10px 20px;
   text-align: left;
-  font-size: 16px;
-  padding: 8px 20px 8px;
-  font-weight: bold;
+  font-size: 18px;
+  font-weight: bolder;
+  margin: 0px 12px;
 }
 .version-card .content {
-  padding: 10px 15px;
+  top: 50px;
   font-size: 12px;
-  background: rgba(0, 0, 0, 0.5);
-  box-shadow: 0 0 1px 0 #fff;
+  /*background: rgba(38, 60, 255, 0.5);*/
+  color: rgba(97, 97, 97, 0.9);
   font-family: "HYWenHei-55W";
   font-weight: normal;
+  margin: 10px 20px 0px;
 }
 .version-card ul {
+  font-weight: 600;
   font-size: 14px;
   padding-left: 20px;
 }
@@ -64,19 +72,25 @@ body {
   color: #d3bc8e;
   display: inline-block;
   border-radius: 3px;
+  background: rgba(0, 0, 0, 0.8);
   padding: 0 3px;
   margin: 1px 2px;
 }
 .version-card .strong {
-  color: #67a9e4;
+  color: #24d5cd;
   display: inline-block;
   border-radius: 3px;
   padding: 0 3px;
   margin: 1px 2px;
 }
-.logo{
+.version{
   text-align: center;
   font-size: 14px;
+  font-weight: 600;
   color: white;
   font-family: 'tttgbnumber';
+  text-shadow:2px 2px 3px #666;
+}
+.V {
+  color: #0065d8;
 }
