--- a/resources/html/help/help.css
+++ b/resources/html/help/help.css
@@ -149,3 +149,15 @@ body {
   color: rgb(0, 0, 0);
   font-family: 'JetBrainsMonoNL-ThinItalic';
 }
+.version{
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  color: white;
+  font-family: 'tttgbnumber';
+  text-shadow: 2px 2px 3px #666;
+}
+.V {
+  color: #dfb568;
+  text-shadow: 2px 2px 5px #00000075;
+}
