新增随机语音、bgm、查看档线，使用#ba版本查看详情，新增一个依赖记得安装

--- a/resources/html/activity/activity.css
+++ b/resources/html/activity/activity.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "FZLanTYJ_Cu";
-  src: url("../../../font/FZLanTYJ_Cu.otf");
+  src: url("../../font/FZLanTYJ_Cu.otf");
   font-weight: normal;
   font-style: normal;
 }
