处理档线无数据的情况

--- a/resources/html/rank/rank.css
+++ b/resources/html/rank/rank.css
@@ -73,7 +73,7 @@ body {
 }
 
 .icon {
-  background-size: 50%;
+  background-size: 104px 97.5px;
   background-repeat: no-repeat;
   background-position: center -5px;
 }
