--- a/resources/html/gacha/index.css
+++ b/resources/html/gacha/index.css
@@ -18,7 +18,7 @@ body {
     flex-direction: column;
     justify-content: center;
     height: 850px;
-    width: 70%;
+    width: 1300px;
     background: url(./items/bg.png);
     background-repeat: no-repeat;
     padding: 50px 10px;
